agregado de map

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                     <h2 class="box__title">Pokémon Rojo Fuego</h2>
                     <h3 class="box__subtitle">Game Boy Advance</h3>
                     <p class="box__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis error a molestias aliquam quasi sed recusandae voluptates dolor, placeat ipsa, accusantium commodi deserunt doloribus suscipit doloremque fuga, adipisci ad. Atque.</p>
+                    <button class="btn-adventure bg-adventure">Ver más</button>
                 </div>
             </article>
             <article class="box">
@@ -50,6 +51,7 @@
                     <h2 class="box__title">Fifa 22</h2>
                     <h3 class="box__subtitle">Ps4/Ps5</h3>
                     <p class="box__text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Similique magni totam enim, ab neque mollitia facilis deserunt quasi harum voluptas tenetur. Quidem velit accusamus numquam dolore, tempore est minus quo?</p>
+                    <button class="btn-football bg-football">Ver más</button>
                 </div>
             </article>
             <article class="box">
@@ -61,6 +63,7 @@
                     <h3 class="box__subtitle">Ps4</h3>
                     <p class="box__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore id asperiores repudiandae quidem iusto minus distinctio facilis accusantium aut incidunt laboriosam, neque, libero blanditiis dolor voluptatum laborum. Eum, mollitia dolorum.
                     </p>
+                    <button class="btn-action bg-action">Ver más</button>
                 </div>
             </article>
         </section>
